Address Link - Add new fields for cloud roles    - `cloud_builder`    - `cloud_customer`    - `cloud_distributor`    - `cloud_export_markup`    - `cloud_import_markup`    - `cloud_seller`    - `cloud_seller_markup`    - `extra_reference1`    - `extra_reference2`    - `extra_reference3` - Renamed fields    - `compute` to `cloud_customer`
Cloud Bill
- New service which returns the details required by CloudBill to run from an address to a target address.

Cloud Budget
- New service which returns the budget information for all of the User's Addresses, from a specific Address

--- a/templates/email/admin_expiry_reminder.html
+++ b/templates/email/admin_expiry_reminder.html
@@ -14,7 +14,7 @@
     <li>Click Edit on the User/Users that need to be updated</li>
     <li>Go to Expiry Date and set for a date in the future</li>
     <li>Click Update in the top right hand corner</li>
-    <li>The User is nto successfully updated and no further action is required</li>
+    <li>The User is now successfully updated and no further action is required</li>
 </ul>
 <p>Please do not hesitate to contact us if you have any difficulty or questions. Our contact details can be found at https://www.cloudcix.com/#/support</p>
 <p>noc@cix.ie</p>
